# Course-selection-chat

./: .env.example  .gitconfig  .gitignore  PUSH_GUIDE.md  README.md  check_db_tables.py  course_db.sqlite  generate_test_cases.py  main.py  pyproject.toml  start_demo.bat  start_demo.ps1  test_admin_api.py
.trae/documents/: course_selection_system_plan.md  crawler_and_incremental_index_plan.md  eval_and_memory_plan.md  github_token_setup_guide.md  rag_langgraph_integration_plan.md
app/: main.py
app/agent/: course_planning_agent.py  llm.py  policies.py  workflow.py
app/api/: academic_history.py  admin.py  catalog.py  chat.py  integrations.py  planning.py  student.py  system.py
app/core/: config.py
app/crawler/: crawler_cleaner.py  forum_review_crawler.py  forum_spider.py  official_notice_crawler.py  playwright_client.py
app/database/: chroma_db.py  mysql.py
app/eval/: eval_report.py  metrics.py  run_eval.py  test_cases.jsonl
app/memory/: conversation_logger.py  need_summary.py  preference_extractor.py
app/models/: course.py  crawled.py  log.py  planning.py
app/rag/: document_loader.py  (+3 more)
demo_data/: course_offerings.json  history.csv  programme.json
docs/: 产品版本规划与验收标准.md  第一阶段标准接口契约.md
eval_outputs/: eval_results.json  eval_summary.md
frontend/: README.md  course.html  feedback.html  history.html  index.html  onboarding.html  profile.html
tests/: conftest.py  test_eval_dataset_generator.py  test_m1_structured_eval.py  test_planning_flow.py  test_synthetic_m1_data.py
数据文件/: 中国海洋大学选课指导.md  培养方案.md  官方选课信息_结构化数据_评价参考适配版.md  选课评价参考.md
(+34 files in other folders)
