[project]
name = "rag-course-system"
version = "0.1.0"
description = "WeOUC 智能选课知识与对话平台"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "dashscope>=1.25.19",
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.2",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "playwright>=1.60.0",
    "pymysql>=1.2.0",
    "pypdf>=6.0.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
